0.7.1/_sources/modules/printing.txt
Printing System
===============

See the :ref:`printing-tutorial` section in Tutorial for introduction into
printing.

This guide documents the printing system in SymPy and how it works
internally.

Printer Class
-------------

.. module:: sympy.printing.printer

The main class responsible for printing is ``Printer`` (see also its
`source code
<https://github.com/sympy/sympy/blob/master/sympy/printing/printer.py>`_):

.. autoclass:: Printer
    :members: doprint, _print

PrettyPrinter Class
-------------------

.. module:: sympy.printing.pretty.pretty
.. module:: sympy.printing.pretty.pretty_symbology
.. module:: sympy.printing.pretty.pretty_stringpict

Pretty printing subsystem is implemented in ``sympy.printing.pretty.pretty`` by
the ``PrettyPrinter`` class deriving from ``Printer``.  It relies on modules
``sympy.printing.pretty.stringPict``, and
``sympy.printing.pretty.pretty_symbology`` for rendering nice-looking formulas.

The module ``stringPict`` provides a base class ``stringPict`` and a derived
class ``prettyForm`` that ease the creation and manipulation of formulas that
span across multiple lines.

The module ``pretty_symbology`` provides primitives to construct 2D shapes
(hline, vline, etc) together with a technique to use unicode automatically when
possible.

MathMLPrinter
-------------

.. module:: sympy.printing.mathml

This class is responsible for MathML printing. See ``sympy.printing.mathml``.

More info on mathml content: http://www.w3.org/TR/MathML2/chapter4.html

LatexPrinter
------------

.. module:: sympy.printing.latex

This class implements LaTeX printing. See ``sympy.printing.latex``.

See also the extended LatexPrinter: :ref:`Extended LaTeXModule for Sympy <extended-latex>`

Gtk
---

.. module:: sympy.printing.gtk

You can print to a grkmathview widget using the function print_gtk located in
sympy.printing.gtk (it requires to have installed gtkmatmatview and
libgtkmathview-bin in some systems).

GtkMathView accepts MathML, so this rendering depends on the mathml representation of the expression

Usage::

    from sympy import *
    print_gtk(x**2 + 2*exp(x**3))

PythonPrinter
-------------

.. module:: sympy.printing.python

This class implements Python printing. Usage::

    >>> from sympy import print_python, sin
    >>> from sympy.abc import x

    >>> print_python(5*x**3 + sin(x))
    x = Symbol('x')
    e = 5*x**3 + sin(x)

fcode
-----

The fcode function translates a sympy expression into Fortran code. The main
purpose is to take away the burden of manually translating long mathematical
expressions. Therefore the resulting expression should also require no (or very
little) manual tweaking to make it compilable. The optional arguments of fcode
can be used to fine-tune the behavior of fcode in such a way that manual changes
in the result are no longer needed.

.. module:: sympy.printing.fcode
.. autofunction:: fcode
.. autofunction:: print_fcode

Two basic examples:

    >>> from sympy import *
    >>> x = symbols("x")
    >>> fcode(sqrt(1-x**2))
    '      sqrt(-x**2 + 1)'
    >>> fcode((3 + 4*I)/(1 - conjugate(x)))
    '      (cmplx(3,4))/(-conjg(x) + 1)'

An example where line wrapping is required:

    >>> expr = sqrt(1-x**2).series(x,n=20).removeO()
    >>> print fcode(expr)
          -715*x**18/65536 - 429*x**16/32768 - 33*x**14/2048 - 21*x**12/1024
         @ - 7*x**10/256 - 5*x**8/128 - x**6/16 - x**4/8 - x**2/2 + 1

In case of line wrapping, it is handy to include the assignment so that lines
are wrapped properly when the assignment part is added.

    >>> print fcode(expr, assign_to="var")
          var = -715*x**18/65536 - 429*x**16/32768 - 33*x**14/2048 - 21*x**
         @ 12/1024 - 7*x**10/256 - 5*x**8/128 - x**6/16 - x**4/8 - x**2/2 +
         @ 1

For piecewise functions, the assign_to option is mandatory:

    >>> print fcode(Piecewise((x,x<1),(x**2,True)), assign_to="var")
          if (x < 1) then
            var = x
          else
            var = x**2
          end if

Note that only top-level piecewise functions are supported due to the lack of
a conditional operator in Fortran. Nested piecewise functions would require the
introduction of temporary variables, which is a type of expression manipulation
that goes beyond the scope of fcode.

Loops are generated if there are Indexed objects in the expression.  This
also requires use of the assign_to option.

    >>> A, B = map(IndexedBase, ['A', 'B'])
    >>> m = Symbol('m', integer=True)
    >>> i = Idx('i', m)
    >>> print fcode(2*B[i], assign_to=A[i])
        do i = 1, m
            A(i) = 2*B(i)
        end do

Repeated indices in an expression with Indexed objects are interpreted as
summation. For instance, code for the trace of a matrix can be generated
with

    >>> print fcode(A[i, i], assign_to=x)
          x = 0
          do i = 1, m
              x = x + A(i, i)
          end do

By default, number symbols such as ``pi`` and ``E`` are detected and defined as
Fortran parameters. The precision of the constants can be tuned with the
precision argument. Parameter definitions are easily avoided using the ``N``
function.

    >>> print fcode(x - pi**2 - E)
          parameter (E = 2.71828182845905d0)
          parameter (pi = 3.14159265358979d0)
          x - pi**2 - E
    >>> print fcode(x - pi**2 - E, precision=25)
          parameter (E = 2.718281828459045235360287d0)
          parameter (pi = 3.141592653589793238462643d0)
          x - pi**2 - E
    >>> print fcode(N(x - pi**2, 25))
          x - 9.869604401089358618834491d0

When some functions are not part of the Fortran standard, it might be desirable
to introduce the names of user-defined functions in the Fortran expression.

    >>> print fcode(1 - gamma(x)**2, user_functions={gamma: 'mygamma'})
          -mygamma(x)**2 + 1

However, when the user_functions argument is not provided, fcode attempts to
use a reasonable default and adds a comment to inform the user of the issue.

    >>> print fcode(1 - gamma(x)**2)
    C     Not Fortran:
    C     gamma(x)
          -gamma(x)**2 + 1

By default the output is human readable code, ready for copy and paste. With the
option ``human=False``, the return value is suitable for post-processing with
source code generators that write routines with multiple instructions. The
return value is a three-tuple containing: (i) a set of number symbols that must
be defined as 'Fortran parameters', (ii) a list functions that can not be
translated in pure Fortran and (iii) a string of Fortran code. A few examples:

    >>> fcode(1 - gamma(x)**2, human=False)
    (set(), set([gamma(x)]), '      -gamma(x)**2 + 1')
    >>> fcode(1 - sin(x)**2, human=False)
    (set(), set(), '      -sin(x)**2 + 1')
    >>> fcode(x - pi**2, human=False)
    (set([(pi, '3.14159265358979d0')]), set(), '      x - pi**2')


Preview
-------

A useful function is ``preview``:

.. module:: sympy.printing.preview

.. autofunction:: preview

